<resources>
  <!-- App name and activity title -->
  <string name="app_name">Woface</string>
  <string name="title_activity_watch_face_config">Watch Face Configuration</string>


  <!-- Hint in whole app -->
  <string name="hint_loading">Loading...</string>
  <string name="button_confirm">Yes</string>
  <string name="button_cancel">Cancel</string>


  <!-- Miscellaneous stuff in tutorial activity -->
  <string name="text_start_journey">S t a r t</string>
  <string name="text_tutorial_setup_description">Long press your watch face on the home screen till
    it shows the watch face picker. Select WoFace and wait for it to be presented in the watch face.
    \nThen from your paired phone, you can use WoFace to customize your watch face. Put your
    girlfriend\'s picture as your watch face!</string>


  <!-- Miscellaneous stuff in config activity -->
  <string name="config_action_share">Share</string>
  <string name="text_update_config">Update Configuration</string>
  <string name="toast_fail_snapshot">Fail to take screenshot from watch, check if your watch face
    is configured and visible</string>

  <!-- TextConfigDialog in config activity -->
  <string name="hint_config_text_content">Write your content</string>
  <string name="label_text_content">Content</string>
  <string name="label_text_color">Color</string>
  <string name="label_text_size">Text size</string>
  <string name="label_coordinate_x">Coordinate X</string>
  <string name="label_coordinate_y">Coordinate Y</string>

  <!-- WeatherConfigDialog in config activity -->
  <string name="label_show_weather">Show Weather</string>
  <string name="label_weather_scale">Scale</string>

  <!-- Dialog titles of config activity. -->
  <string name="watchface_ticks_color">Watch face ticks color</string>
  <string name="watchface_hands_color">Watch face hands color</string>
  <string name="watchface_text">Show text on watch</string>
  <string name="watchface_snapshot_share">Share your watch face</string>
  <string name="watchface_snapshot_progress">Taking screenshot from watch</string>
  <string name="watchface_weather">Show weather on watch</string>

</resources>
