<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_margin="@dimen/layout_elements_vertical_margin">

  <!-- If show weather is checked as no, then the rest of the config is non-interactive. -->
  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/default_layout_margin"
      android:paddingBottom="@dimen/default_layout_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/label_show_weather"
        android:textSize="@dimen/default_label_text_size"
        android:textColor="@android:color/black"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:checked="true"/>
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/default_layout_margin"
      android:paddingBottom="@dimen/default_layout_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/label_weather_scale"
        android:textSize="@dimen/default_label_text_size"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/dialog_weather_scale_spinner"
        android:entries="@array/weather_scales"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:layout_width="@dimen/text_config_spinner_width"
        android:layout_height="wrap_content" />
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/default_layout_margin"
      android:paddingBottom="@dimen/default_layout_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/label_text_size"
        android:textSize="@dimen/default_label_text_size"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/dialog_weather_font_spinner"
        android:entries="@array/fonts_array"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:layout_width="@dimen/text_config_spinner_width"
        android:layout_height="wrap_content"/>

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/default_layout_margin"
      android:paddingBottom="@dimen/default_layout_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/label_coordinate_x"
        android:textSize="@dimen/default_label_text_size"
        android:textColor="@android:color/black"/>

    <SeekBar
        android:id="@+id/dialog_weather_coordinate_x"
        android:max="100"
        android:progress="50"
        android:layout_alignParentEnd="true"
        android:layout_width="@dimen/text_config_seekbar_width"
        android:layout_height="wrap_content"/>

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/default_layout_margin"
      android:paddingBottom="@dimen/default_layout_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/label_coordinate_y"
        android:textSize="@dimen/default_label_text_size"
        android:textColor="@android:color/black"/>

    <SeekBar
        android:id="@+id/dialog_weather_coordinate_y"
        android:max="100"
        android:progress="50"
        android:layout_alignParentEnd="true"
        android:layout_width="@dimen/text_config_seekbar_width"
        android:layout_height="wrap_content"/>

  </RelativeLayout>
</LinearLayout>